--- a/Index.html
+++ b/Index.html
@@ -14,20 +14,15 @@
 </head>
 
 <body>
-    <!-- Entregable 1 28 junio -->
     <div class="contenedor">
         <!-- Navegación -->
         <nav class="navegacion-principal">
-            <!-- Aqui va el logo(Marca de la compañia) usar la clase  :  navegacion-principal__marca-->
-            <div>
+            <!-- Aqui va el logo (Marca de la compañia) -->
+            <div class="navegacion-principal__marca">
                 <img src="Assets/Spotify_App_Logo.svg.png" class="logo" alt="logo de spotify">
             </div>
             <!-- Navegación Izquierda -->
             <ul class="navegacion-principal__menu">
-
-                <div class="boton-menu">
-                    <i class="fas fa-bars fa-2x"></i>
-                </div>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Buscar</a></li>
                 <li><a href="#">Tu Biblioteca</a></li>
@@ -38,6 +33,13 @@
             <ul class="navegacion-principal__menu-derecha">
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
+            <!-- Botón de Menú (solo para móviles) -->
+            <div class="boton-menu">
+                <i class="fas fa-bars fa-2x"></i>
+            </div>
         </nav>
     </div>
     <hr>
+</body>
+
+</html>
