--- a/Index.html
+++ b/Index.html
@@ -90,24 +90,85 @@
         </div>
     </div>
 
-    <!-- Aque voy a agregar el JS para que cuando se haga click en el menu el vibre el logo -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const links = document.querySelectorAll('.link');
-            const logo = document.getElementById('logo');
+<!-- Entregable 2 5 de julio-->
+    <!-- Banner de Tarjetas 1-->
+     <main>
 
-            links.forEach(link => {
-                link.addEventListener('click', function () {
-                    logo.classList.add('vibrate');
+    <div class="banner-tarjetas-uno">
+          <img src="Assets/tech-red.jpg" class="imagen_central" alt="">
+          <h2>Lorem ipsum dolor.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat maxime facilis quasi alias illo, fugiat cupiditate porro dolores tenetur delectus!</p>
+          <a href="#" class="boton_baner1">Más información <i class="fas fa-chevron-right"></i></a>
+      </div>
+   
+  
+      <!-- TARJETAS DE NOTICIAS -->
+      <div class="tarjetas-noticias_central">
+        <div class="tarjetas-noticias__tarjeta">
+<img src="Assets/news1.jpg" class="imagen_targetas_central" alt="concierto">
+          <h3>Lorem ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?</p>
+          <a class="boton-tagetas-doble" href="#">Más información <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div class="tarjetas-noticias__tarjeta">
+      <img src="Assets/news2.jpg" class="imagen_targetas_central" alt="concierto country">
+          <h3>Lorem ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?</p>
+          <a class="boton-tagetas-doble" href="#">Más información <i class="fas fa-angle-double-right"></i></a>
+        </div>
+      </div>
+  
+      <!-- Banner de Tarjetas 2-->
+      <section class="banner-tarjetas-dos">
+        <div class="banner-tarjetas-dos__contenido">
+          <img src="Assets/Image-five.jpg" class="imagen_baner2" alt="">
+          <h2>Lorem ipsum dolor.</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut qui laudantium id quam magni accusantium, veritatis, ipsam labore, reprehenderit dolore repudiandae nemo sint deserunt! Suscipit facilis qui inventore consequatur fugit.</p>
+          <a href="#" class="boton_targetas2">Más información <i class="fas fa-chevron-right"></i></a>
+        </div>
+      </section>
+  
+      <!-- Seguir -->
+      <section class="social">
+        <p>Sigue a NoticiasTecnológicas</p>
+        <div class="social__enlaces">
+          <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+          <a href="https://in.com"><i class="fab fa-linkedin"></i></a>
+         <!-- Aqui va el resto de los iconos-->
+   
+        </div>
+      </section>
+    </div>
+  </main>
+    <!-- Enlaces de Pie de Página -->
+<div class="contenedor">
+    <div class="enlaces-pie">
+      <div class="enlaces-pie__contenedor">
+        <ul class="enlaces-pie__lista">
+          <li><a href="#"><h3>Título Uno</h3></a></li>
+          <li><a href="#">Ver Discografias </a></li>
+        </ul>
+        <ul class="enlaces-pie__lista">
+          <li><a href="#"><h3>Título Dos</h3></a></li>
+          <li><a href="#">Descargar Musica </a></li>
+        </ul>
+      </div>
+  
+      <!-- Pie de Página -->
+      <footer class="pie">
+        <h3>Derechos de Autor de NoticiasTecnológicas</h3>
+      </footer>
+    </div>
+      </div>
+   
+  </body>
+  
+  </html>
 
-                    // Remover la clase de vibración después de 0.6 segundos (3 ciclos de vibración)
-                    setTimeout(() => {
-                        logo.classList.remove('vibrate');
-                    }, 600);
-                });
-            });
-        });
-    </script>
+
+
+<script src="JS/Variables.js"></script>
 </body>
 
 </html>
